--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "express-jwt": "^5.1.0",
     "jsonwebtoken": "^7.3.0",
     "mongoose": "^4.9.3",
-    "morgan": "^1.8.1"
+    "morgan": "^1.8.1",
+    "passport-local": "^1.0.0"
   }
 }
